[package]
name = "parquet-py"
version = "0.2.1-beta"
homepage = "https://github.com/zachspar/parquet-py"
repository = "https://github.com/zachspar/parquet-py.git"
readme = "README.md"
license-file = "LICENSE"
description = "A simple command-line interface & Python API for parquet"
edition = "2021"
exclude = [
    "parq/",
    ".github/"
]

[build]
default = "release"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "parq"
crate-type = ["cdylib"]

[dependencies]
parquet = { version = "52.0.0", features = ["json"] }
pyo3 = "0.22.0"
serde_json = "1.0.120"
csv = "1.3.0"
