[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "parquet-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click>=7.0.0",
]
dynamic = ["version"]

[project.scripts]
"parq" = "parq.cli:__main__.parq_cli"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "parq.lib"
